[tool.poetry]
name = "hw10_2"
version = "0.1.0"
description = ""
authors = ["romaniuk-o <O.romaniuk54@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
mongoengine = "^0.24.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
